custom greeting script

--- a/index.html
+++ b/index.html
@@ -9,7 +9,32 @@
 </head>
 <body>
     <h1>Portfolio</h1>
-  
-<p>Is this in fact live? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum molestiae non impedit. Velit iure magnam ab provident nesciunt porro nobis quis nisi, adipisci voluptas, ex ea officiis atque veniam neque </p>
-<script src="app/js/script.js"></script>
+   <figure><img src="app/images/meInAtree.jpeg" alt="photo of me squatting inside a fallen seqouia tree-trunk" width="220" height="320">
+    <figcaption>Inside a fallen seqouia.</figcaption>
+   </figure>
+
+    <script src="app/js/greetingscript.js"></script>
+
+  <nav>Citizen Science Resources</nav>
+  <li>
+  <a href="https://www.inaturalist.org/" target="_blank">iNaturalist</a>
+  <a href="https://www.nps.gov/subjects/bats/all-about-bats.htm">Bats in the National Park</a>
+</li>
+<p>California is full of superlatives, trees notwithstanding.  The state claims the largest, tallest, and oldest.</p>
+
+<table>
+    <tr>
+        <th></th>
+    <th scope="col">Tree Name</th>
+    <th scope="col">Superlative</th>
+    <th scope="col">Location</th>
+    </tr>
+    <tr>
+        <th scope="row">tallest:</th>
+        <td>55</td>
+    </tr>
+</table>
+
+<a href="mailto:patrickhbarfield@gmail.com">Contact</a>
+</p>
 </html>  
