--- a/index.html
+++ b/index.html
@@ -6,16 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
+
 <body>
-    <h1>Portfolio</h1>
+    <div class="title">
+    <h1>Project</h1>
+</div>
+
    <figure><img src="app/images/meInAtree.jpeg" alt="photo of me squatting inside a fallen seqouia tree-trunk" width="220" height="320">
     <figcaption>Inside a fallen seqouia.</figcaption>
    </figure>
 
     <script src="app/js/greetingscript.js"></script>
 
-  <nav>Citizen Science Resources</nav>
+    <div>
+  <h2>Citizen Science Resources</h2>
   <li>
   <a href="https://www.inaturalist.org/" target="_blank">iNaturalist</a>
   <a href="https://www.nps.gov/subjects/bats/all-about-bats.htm">Bats in the National Park</a>
@@ -34,7 +41,12 @@
         <td>55</td>
     </tr>
 </table>
+</div>
 
-<a href="mailto:patrickhbarfield@gmail.com">Contact</a>
+<a href="mailto:email@gmail.com">Contact</a>
 </p>
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
+</body>
 </html>  
