--- a/index.html
+++ b/index.html
@@ -1,52 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="app/css/style.css">
     <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
 <body>
     <div class="title">
-    <h1>Project</h1>
-</div>
+        <h1>Project</h1>
+    </div>
 
-   <figure><img src="app/images/meInAtree.jpeg" alt="photo of me squatting inside a fallen seqouia tree-trunk" width="220" height="320">
-    <figcaption>Inside a fallen seqouia.</figcaption>
-   </figure>
+    <figure><img src="app/images/meInAtree.jpeg" alt="photo of me squatting inside a fallen seqouia tree-trunk"
+            width="220" height="320">
+        <figcaption>Inside a fallen seqouia.</figcaption>
+    </figure>
 
     <script src="app/js/greetingscript.js"></script>
 
     <div>
-  <h2>Citizen Science Resources</h2>
-  <li>
-  <a href="https://www.inaturalist.org/" target="_blank">iNaturalist</a>
-  <a href="https://www.nps.gov/subjects/bats/all-about-bats.htm">Bats in the National Park</a>
-</li>
-<p>California is full of superlatives, trees notwithstanding.  The state claims the largest, tallest, and oldest.</p>
+        <div class="form">
+            <form action="javascript:void(0);" method="POST" onsubmit="app.Add()">
+                <input type="text" id="add-todo" placeholder="Thing To-Do">
+                <input type="submit" value="Add" class="btn
+                btn-primary">
+            </form>
+            <p>You Have:</p>
+            <p id="counter"></p>
+            <table>
+                <tr class="to-do">
+                    <th>
+                        <h3>To-Do:</h3>
+                    </th>
+                </tr>
+                <tbody id="tasks">
+                </tbody>
+            </table>
+        </div>
 
-<table>
-    <tr>
-        <th></th>
-    <th scope="col">Tree Name</th>
-    <th scope="col">Superlative</th>
-    <th scope="col">Location</th>
-    </tr>
-    <tr>
-        <th scope="row">tallest:</th>
-        <td>55</td>
-    </tr>
-</table>
-</div>
+        <div id="edit-box" role="aria-hidden">
+            <form action="javascript:void(0);" method="POST" id="save-edit">
+                <input type="text" id="edit-todo">
+                <input type="submit" value="Save" class="btn
+                btn-success">
+                <a onclick="CloseInput()" aria-label="Close">&#10006;</a>
+            </form>
+        </div>
 
-<a href="mailto:email@gmail.com">Contact</a>
-</p>
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+        <h2>Citizen Science Resources:</h2>
+        <li>
+            <a href="https://www.inaturalist.org/" target="_blank">iNaturalist</a>
+            <a href="https://www.nps.gov/subjects/bats/all-about-bats.htm">Bats in the National Park</a>
+        </li>
+        <p>California is full of superlatives, trees notwithstanding. The state claims the largest, tallest, and oldest.
+        </p>
+
+        <table>
+            <tr>
+                <th></th>
+                <th scope="col">Tree Name</th>
+                <th scope="col">Superlative</th>
+                <th scope="col">Location</th>
+            </tr>
+            <tr>
+                <th scope="row">tallest:</th>
+                <td>55</td>
+            </tr>
+        </table>
+    </div>
+
+    <a href="mailto:email@gmail.com">Contact</a>
+    </p>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 
 </body>
-</html>  
+
+</html>
